--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "axios": "^0.19.2",
     "swiper": "^5.3.8",
     "vue": "^2.5.2",
-    "vue-router": "^3.1.6"
+    "vue-router": "^3.1.6",
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
